Adding memory requirements for surefire
To address a build failure in our CI environment